# alsax

./: CMakeLists.txt  README.md  make.sh  release.sh
downsample/inc/: filterkit_usc.h  largefilter.h  resample_usc_ex.h  smallfilter.h  sys_plat.h  usc_dsp_resample_api.h  uscstdefs.h
downsample/src/: filterkit_usc.c  resamplesubs_usc_ex.c  sample32k.c  sys_plat.c
inc/: sai_micbasex_interface.h
inc/tinyalsa/: asoundlib.h
sample/: sample_basex.cpp  sample_boosttest.cpp
src/: sai_downsample.hpp  sai_micbasex.cpp  sai_pcmbase.hpp  sai_pcmbase_alsa.hpp  sai_pcmbase_tinyalsa.hpp  version.in.hpp
toolchain-cmake/: aarch64-gnu-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  arm32-poky-linux-toolchain.cmake  armeabi-v7a-toolchain.cmake  poky32-linux-toolchain.cmake
